[package]
name = "inwelling"
version = "0.5.2"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
keywords = [ "cargo", "metadata", "downstream", "inject", "reverse" ]
readme = "README.md"
repository = "https://github.com/oooutlk/inwelling"
documentation = "https://docs.rs/inwelling"
categories = [ "development-tools::build-utils" ]
description = "Collects information from downstream crates at compile-time."

[dependencies]
toml = "0.7.3"
