[package]
name = "beta"
version = "0.1.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2021"
publish = false

[dependencies]
echo = { path = "../echo" }
alpha = { path = "../alpha" }

[build-dependencies]
inwelling = { path = "../.." }

[package.metadata.inwelling.echo]
beta = "the second letter"
