[package]
name = "gamma"
version = "0.1.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2021"
publish = false

[dependencies]
echo = { path = "../echo" }
alpha = { path = "../alpha" }
beta = { path = "../beta" }

[build-dependencies]
inwelling = { path = "../.." }

[features]
to_echo = []

[package.metadata.inwelling.echo]
gamma = "the third letter"
